# src/main/java/com/soaringclouds/webshop/financialsmicroservice/endpoint/FinancialsMicroserviceEndpoint.java
@@ -1,12 +1,15 @@
 package com.soaringclouds.webshop.financialsmicroservice.endpoint;
 
 import com.soaringclouds.webshop.financialsmicroservice.gen.api.InvoicesResourcesApi;
+import com.soaringclouds.webshop.financialsmicroservice.gen.api.PaymentsResourcesApi;
 import com.soaringclouds.webshop.financialsmicroservice.gen.api.ServiceOperationsResourcesApi;
 import com.soaringclouds.webshop.financialsmicroservice.gen.model.HealthCheckResponse;
 import com.soaringclouds.webshop.financialsmicroservice.gen.model.Invoice;
+import com.soaringclouds.webshop.financialsmicroservice.gen.model.Payment;
 import com.soaringclouds.webshop.financialsmicroservice.gen.model.ResponseMetadata;
 import com.soaringclouds.webshop.financialsmicroservice.service.HealthService;
 import com.soaringclouds.webshop.financialsmicroservice.service.InvoiceService;
+import com.soaringclouds.webshop.financialsmicroservice.service.PaymentService;
 import org.springframework.beans.factory.annotation.Autowired;
 
 import java.util.List;
@@ -14,11 +17,14 @@ import java.util.List;
 /**
  * Created by svb on 23.02.18.
  */
-public class FinancialsMicroserviceEndpoint implements InvoicesResourcesApi, ServiceOperationsResourcesApi {
+public class FinancialsMicroserviceEndpoint implements InvoicesResourcesApi, ServiceOperationsResourcesApi,
+		PaymentsResourcesApi {
 
     @Autowired private InvoiceService invoiceService;
 
     @Autowired private HealthService healthService;
+
+    @Autowired private PaymentService paymentService;
 
     @Override
     public void apiFinancialsInvoicesByInvoiceIdDelete(String invoiceId) {
@@ -54,5 +60,15 @@ public class FinancialsMicroserviceEndpoint implements InvoicesResourcesApi, Ser
     public HealthCheckResponse apiFinancialsHealthGet() {
 
 	return healthService.getServiceHealth();
+    }
+
+    @Override
+    public List<Payment> apiFinancialsPaymentsGet(String invoiceId, String customerNo) {
+	return paymentService.findPaymentByCriteria(invoiceId, customerNo);
+    }
+
+    @Override
+    public ResponseMetadata apiFinancialsPaymentsPost(Payment body, String invoiceId, String customerNo) {
+	return paymentService.savePaymentAndUpdateInvoice(body);
     }
 }
