# src/main/resources/api.yaml
@@ -46,13 +46,13 @@ paths:
               order_date: 2018-02-17T21:00:00.0000000Z
               shipping_costs: 6.9900000000000002
               total_price: 31.960000000000001
+              payment_status: PENDING
               customer:
                 customer_no: CGN4711
                 first_name: Sven
                 last_name: Bernhardt
                 phone: +49 211 5093733
                 email: sven@yourmail.com
-                _id: 12345678908754324567854345675432
               billing_address:
                 type: BILLING
                 street_number: 15
@@ -60,7 +60,6 @@ paths:
                 city: Köln
                 postcode: 50858
                 country: DE
-                _id: 12345678908754324567854345675432
               invoice_address:
                 type: BILLING
                 street_number: 15
@@ -68,7 +67,6 @@ paths:
                 city: Köln
                 postcode: 50858
                 country: DE
-                _id: 12345678908754324567854345675432
               invoice_positions:
               - position_id: 1
                 amount: 1
@@ -78,7 +76,6 @@ paths:
                 vat: 19
                 gross_price: 24.969999999999999
                 currency: EUR
-                _id: 12345678908754324567854345675432
               _id: 12345678908754324567854345675432
       x-unitTests:
       - request:
@@ -92,7 +89,7 @@ paths:
           x-matchResponseSchema: true
           headers:
             Content-Type: application/json; charset=utf-8
-          body: '[  {    "invoice_id": "invoice0815",    "order_id": "order4711",    "order_date": "2018-02-17T21:00:00.000Z",    "shipping_costs": 6.99,    "total_price": 31.96,    "customer": {      "customer_no": "CGN4711",      "first_name": "Sven",      "last_name": "Bernhardt",      "phone": "+49 211 5093733",      "email": "sven@yourmail.com",      "_id": "12345678908754324567854345675432"    },    "billing_address": {      "type": "BILLING",      "street_number": "15",      "street": "Ludwig-Jahn-Strasse",      "city": "Köln",      "postcode": "50858",      "country": "DE",      "_id": "12345678908754324567854345675432"    },    "invoice_address": {      "type": "BILLING",      "street_number": "15",      "street": "Ludwig-Jahn-Strasse",      "city": "Köln",      "postcode": "50858",      "country": "DE",      "_id": "12345678908754324567854345675432"    },    "invoice_positions": [      {        "position_id": 1,        "amount": 1,        "description": "Blue-Ray Box: Game of Thrones Season 7",        "product_number": "B073ZKVHFV",        "net_price": 20.98,        "vat": 19,        "gross_price": 24.97,        "currency": "EUR",        "_id": "12345678908754324567854345675432"      }    ],    "_id": "12345678908754324567854345675432"  }]'
+          body: '[  {    "invoice_id": "invoice0815",    "order_id": "order4711",    "order_date": "2018-02-17T21:00:00.000Z",    "shipping_costs": 6.99,    "total_price": 31.96,    "payment_status": "PENDING",    "customer": {      "customer_no": "CGN4711",      "first_name": "Sven",      "last_name": "Bernhardt",      "phone": "+49 211 5093733",      "email": "sven@yourmail.com"    },    "billing_address": {      "type": "BILLING",      "street_number": "15",      "street": "Ludwig-Jahn-Strasse",      "city": "Köln",      "postcode": "50858",      "country": "DE"    },    "invoice_address": {      "type": "BILLING",      "street_number": "15",      "street": "Ludwig-Jahn-Strasse",      "city": "Köln",      "postcode": "50858",      "country": "DE"    },    "invoice_positions": [      {        "position_id": 1,        "amount": 1,        "description": "Blue-Ray Box: Game of Thrones Season 7",        "product_number": "B073ZKVHFV",        "net_price": 20.98,        "vat": 19,        "gross_price": 24.97,        "currency": "EUR"      }    ],    "_id": "12345678908754324567854345675432"  }]'
         x-testShouldPass: true
         x-testEnabled: true
         x-testName: Search invoices1
@@ -142,7 +139,7 @@ paths:
           uri: /api/financials/invoices
           headers:
             Content-Type: application/json
-          body: '{  "invoice_id": "invoice0815",  "order_id": "order4711",  "order_date": "2018-02-17T21:00:00.000Z",  "shipping_costs": 6.99,  "total_price": 31.96,  "customer": {    "customer_no": "CGN4711",    "first_name": "Sven",    "last_name": "Bernhardt",    "phone": "+49 211 5093733",    "email": "sven@yourmail.com",    "_id": "12345678908754324567854345675432"  },  "billing_address": {    "type": "BILLING",    "street_number": "15",    "street": "Ludwig-Jahn-Strasse",    "city": "Köln",    "postcode": "50858",    "country": "DE",    "_id": "12345678908754324567854345675432"  },  "invoice_address": {    "type": "BILLING",    "street_number": "15",    "street": "Ludwig-Jahn-Strasse",    "city": "Köln",    "postcode": "50858",    "country": "DE",    "_id": "12345678908754324567854345675432"  },  "invoice_positions": [    {      "position_id": 1,      "amount": 1,      "description": "Blue-Ray Box: Game of Thrones Season 7",      "product_number": "B073ZKVHFV",      "net_price": 20.98,      "vat": 19,      "gross_price": 24.97,      "currency": "EUR",      "_id": "12345678908754324567854345675432"    }  ],  "_id": "12345678908754324567854345675432"}'
+          body: '{  "invoice_id": "invoice0815",  "order_id": "order4711",  "order_date": "2018-02-17T21:00:00.000Z",  "shipping_costs": 6.99,  "total_price": 31.96,  "payment_status": "PENDING",  "customer": {    "customer_no": "CGN4711",    "first_name": "Sven",    "last_name": "Bernhardt",    "phone": "+49 211 5093733",    "email": "sven@yourmail.com"  },  "billing_address": {    "type": "BILLING",    "street_number": "15",    "street": "Ludwig-Jahn-Strasse",    "city": "Köln",    "postcode": "50858",    "country": "DE"  },  "invoice_address": {    "type": "BILLING",    "street_number": "15",    "street": "Ludwig-Jahn-Strasse",    "city": "Köln",    "postcode": "50858",    "country": "DE"  },  "invoice_positions": [    {      "position_id": 1,      "amount": 1,      "description": "Blue-Ray Box: Game of Thrones Season 7",      "product_number": "B073ZKVHFV",      "net_price": 20.98,      "vat": 19,      "gross_price": 24.97,      "currency": "EUR"    }  ],  "_id": "12345678908754324567854345675432"}'
         expectedResponse:
           x-allowExtraHeaders: true
           x-bodyMatchMode: RAW
@@ -288,11 +285,18 @@ paths:
         required: false
         type: string
         description: Filter for invoice_id
+      - name: customer_no
+        in: query
+        required: false
+        type: string
+        description: Filter for customer_no
       responses:
         200:
           description: ''
           schema:
-            $ref: '#/definitions/Payment'
+            type: array
+            items:
+              $ref: '#/definitions/Payment'
           examples: {}
       x-unitTests:
       - request:
@@ -335,6 +339,11 @@ paths:
         required: false
         type: string
         description: Filter for invoice_id
+      - name: customer_no
+        in: query
+        required: false
+        type: string
+        description: Filter for customer_no
       responses:
         201:
           description: ''
@@ -347,7 +356,7 @@ paths:
           uri: /api/financials/payments
           headers:
             Content-Type: application/json
-          body: '{  "payment_id": "pay666",  "invoice_id": "invoice0815",  "order_id": "order4711",  "payment_type": "VISA",  "payment_state": "PENDING",  "_id": "12345678908754324567854345675432"}'
+          body: '{  "payment_id": "pay666",  "invoice_id": "invoice0815",  "order_id": "order4711",  "customer_no": "order4711",  "payment_type": "VISA",  "payment_state": "PENDING",  "_id": "12345678908754324567854345675432"}'
         expectedResponse:
           x-allowExtraHeaders: true
           x-bodyMatchMode: NONE
@@ -484,10 +493,6 @@ definitions:
         description: ''
         example: +49 211 5093733
         type: string
-      _id:
-        description: Technical database ID
-        example: 12345678908754324567854345675432
-        type: string
     required:
     - customer_no
     - first_name
@@ -518,10 +523,6 @@ definitions:
       street:
         description: ''
         example: Ludwig-Jahn-Strasse
-        type: string
-      _id:
-        description: Technical database ID
-        example: 12345678908754324567854345675432
         type: string
     required:
     - type
@@ -580,10 +581,6 @@ definitions:
         format: double
       currency:
         $ref: '#/definitions/Currency'
-      _id:
-        description: Technical database ID
-        example: 12345678908754324567854345675432
-        type: string
     required:
     - position_id
     - amount
@@ -615,13 +612,13 @@ definitions:
       order_date: 2018-02-17T21:00:00.0000000Z
       shipping_costs: 6.9900000000000002
       total_price: 31.960000000000001
+      payment_status: PENDING
       customer:
         customer_no: CGN4711
         first_name: Sven
         last_name: Bernhardt
         phone: +49 211 5093733
         email: sven@yourmail.com
-        _id: 12345678908754324567854345675432
       billing_address:
         type: BILLING
         street_number: 15
@@ -629,7 +626,6 @@ definitions:
         city: Köln
         postcode: 50858
         country: DE
-        _id: 12345678908754324567854345675432
       invoice_address:
         type: BILLING
         street_number: 15
@@ -637,7 +633,6 @@ definitions:
         city: Köln
         postcode: 50858
         country: DE
-        _id: 12345678908754324567854345675432
       invoice_positions:
       - position_id: 1
         amount: 1
@@ -647,7 +642,6 @@ definitions:
         vat: 19
         gross_price: 24.969999999999999
         currency: EUR
-        _id: 12345678908754324567854345675432
       _id: 12345678908754324567854345675432
     type: object
     properties:
@@ -673,6 +667,8 @@ definitions:
         description: ''
         example: 2/17/2018 9:00:00 PM
         type: string
+      payment_status:
+        $ref: '#/definitions/PaymentStatus'
       customer:
         $ref: '#/definitions/Customer'
       billing_address:
@@ -693,12 +689,25 @@ definitions:
     - order_id
     - shipping_costs
     - total_price
+  PaymentStatus:
+    title: payment_status
+    example: PENDING
+    x-enum-elements:
+    - name: PENDING
+      description: ''
+    - name: RECEIVED
+      description: ''
+    type: string
+    enum:
+    - PENDING
+    - RECEIVED
   Payment:
     title: Payment
     example:
       payment_id: pay666
       invoice_id: invoice0815
       order_id: order4711
+      customer_no: order4711
       payment_type: VISA
       payment_state: PENDING
       _id: 12345678908754324567854345675432
@@ -709,6 +718,10 @@ definitions:
         example: invoice0815
         type: string
       order_id:
+        description: ''
+        example: order4711
+        type: string
+      customer_no:
         description: ''
         example: order4711
         type: string
@@ -727,6 +740,7 @@ definitions:
     required:
     - invoice_id
     - order_id
+    - customer_no
     - payment_type
   PaymentType:
     title: payment_type
